--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ amqp==5.2.0
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 appdirs==1.4.4
+asttokens==2.4.1
 async-timeout==4.0.3
 asyncssh==2.14.2
 atpublic==4.1.0
@@ -19,11 +20,14 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+comm==0.2.2
 configobj==5.0.8
 contourpy==1.2.1
 credit-scoring-model==0.1.0
 cryptography==42.0.8
 cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
 dictdiffer==0.9.0
 diskcache==5.6.3
 distro==1.9.0
@@ -38,6 +42,7 @@ dvc-studio-client==0.20.0
 dvc-task==0.4.0
 entrypoints==0.4
 exceptiongroup==1.2.1
+executing==2.0.1
 filelock==3.14.0
 flatten-dict==0.4.2
 flufl.lock==7.1.1
@@ -52,26 +57,37 @@ gto==1.7.1
 hydra-core==1.3.2
 idna==3.7
 iniconfig==2.0.0
+ipykernel==6.29.4
+ipython==8.25.0
 iterative-telemetry==0.0.8
+jedi==0.19.1
 joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 kiwisolver==1.4.5
 kombu==5.3.7
 markdown-it-py==3.0.0
 matplotlib==3.9.0
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 multidict==6.0.5
+nest-asyncio==1.6.0
 networkx==3.3
 numpy==1.26.4
 omegaconf==2.3.0
 orjson==3.10.3
 packaging==24.0
 pandas==2.2.2
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
 pillow==10.3.0
 platformdirs==3.11.0
 pluggy==1.5.0
 prompt_toolkit==3.0.46
 psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycparser==2.22
 pydantic==2.7.3
 pydantic_core==2.18.4
@@ -84,6 +100,7 @@ pytest==8.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
+pyzmq==26.0.3
 requests==2.32.3
 rich==13.7.1
 ruamel.yaml==0.18.6
@@ -99,11 +116,14 @@ shtab==1.7.1
 six==1.16.0
 smmap==5.0.1
 sqltrie==0.11.0
+stack-data==0.6.3
 tabulate==0.9.0
 threadpoolctl==3.5.0
 tomli==2.0.1
 tomlkit==0.12.5
+tornado==6.4.1
 tqdm==4.66.4
+traitlets==5.14.3
 typer==0.12.3
 typing_extensions==4.12.1
 tzdata==2024.1
